# ffmpeg-wrap

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  prek.yml  python-publish.yml  python-tests.yml
docs/: async.md  guide.md  index.md
docs/reference/: async.md  sync.md
src/ffmpeg_wrap/: __init__.py  _builder.py  _encoders.py  _errors.py  _filters.py  _probe.py  _textio.py  aio.py
tests/: conftest.py  test_aio_highload.py  test_aio_packaging.py  test_aio_probe.py  test_aio_run.py  test_builder.py  test_encoders.py  test_errors.py  test_filters.py  test_integration_real_media.py  test_probe.py  test_public_api.py  test_readme.py  test_shared_core.py
